# magic-curves

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
crates/magic-curves/: Cargo.toml
crates/magic-curves-wasm/: Cargo.toml
crates/magic-curves-wasm/src/: lib.rs
crates/magic-curves/src/core/: error.rs  exponential.rs  linear.rs  logarithmic.rs  mod.rs  quadratic.rs  sigmoid.rs  tools.rs  types.rs
