[package]
name = "magic-curves-wasm"
version = "0.1.0"
authors = ["Kevin Rodriguez <_@kevinrodriguez.io>"]
edition = "2018"
description = "WebAssembly bindings for the magic-curves library."
license = "MIT"
repository = "https://github.com/kevinrodriguez-io/magic-curves"
homepage = "https://github.com/kevinrodriguez-io/magic-curves"
documentation = "https://docs.rs/magic-curves-wasm"
readme = "../../README.md"
keywords = ["blockchain", "financial", "solana", "defi", "finance"]
categories = ["finance", "cryptography", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
magic-curves = { path = "../magic-curves" }
wasm-bindgen = "0.2.84"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
