[package]
name = "magic-curves"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Rodriguez <_@kevinrodriguez.io>"]
description = "A Rust library to deal with bonding curves."
license = "MIT"
repository = "https://github.com/kevinrodriguez-io/magic-curves"
homepage = "https://github.com/kevinrodriguez-io/magic-curves"
documentation = "https://docs.rs/magic-curves"
readme = "../../README.md"
keywords = ["blockchain", "financial", "solana", "defi", "finance"]
categories = ["finance", "cryptography"]

[dependencies]
num-traits = "^0.2.19"
